# nsafepass

./: .gitignore  Makefile.am  README.md  configure.ac
doxygen/: Doxyfile.in
src/: common.h  encrypt-xor.c  encrypt.h  nsafepass.c  random-xkcd.c  random.h
